--- a/send/index.html
+++ b/send/index.html
@@ -55,7 +55,7 @@
             
             // 앱의 스킴 주소 (Android Manifest / iOS Info.plist에 설정된 값)
             // 예: guruwallet://app/send?to=...
-            var APP_SCHEME_BASE = "guruwallet://send"; 
+            var APP_SCHEME_BASE = "guruwallet://"; 
             // ==========================================
 
             var userAgent = navigator.userAgent;
