--- a/send/index.html
+++ b/send/index.html
@@ -53,8 +53,7 @@
             var ANDROID_PACKAGE = "com.gurufin.wallet"; 
             var IOS_APP_ID = "6740982061"; 
             
-            // 앱의 스킴 주소 (Android Manifest / iOS Info.plist에 설정된 값)
-            // 예: guruwallet://app/send?to=...
+            
             var APP_SCHEME_BASE = "guruwallet://send"; 
             // ==========================================
 
@@ -72,8 +71,8 @@
                 storeUrl = "https://play.google.com/store/apps/details?id=" + ANDROID_PACKAGE;
             }
 
-            // 2. 딥링크 주소 생성 (현재 페이지의 파라미터 ?to=... 등을 그대로 앱에 전달)
-            var currentParams = window.location.search; // "?to=guru1...&amt=10..." 부분
+            // 2. 딥링크 주소 생성 (현재 페이지의 파라미터 그대로 앱에 전달)
+            var currentParams = window.location.search; 
             var deepLink = APP_SCHEME_BASE + currentParams;
 
             // 3. 버튼 세팅 (자동 이동 실패 시 수동 클릭용)
